@@ -26,5 +26,4 @@ Let's check the content::
     products
     src
     var
-    zopeskel.txt
 
