@@ -27,4 +27,3 @@ Let's check the content::
     plone.example.egg-info
     setup.cfg
     setup.py
-    zopeskel.txt
