@@ -26,4 +26,3 @@ Let's check the content::
     products
     src
     var
-    zopeskel.txt
